v 7.2.0
  - Explore page
  - Add project stars (Ciro Santilli)
  - Log Sidekiq arguments
  - Fix cpu usage issue in Firefox
  - Better labels: colors, ability to rename and remove
  - Improve the way merge request collects diffs
  - Improve compare page for large diffs  

v 7.1.0
  - Remove observers
  - Improve MR discussions
  - Filter by description on Issues#index page
  - Fix bug with namespace select when create new project page
  - Show README link after description for non-master members
  - Add @all mention for comments
  - Dont show reply button if user is not signed in
  - Expose more information for issues with webhook
  - Add a mention of the merge request into the default merge request commit message
  - Improve code highlight, introduce support for more languages like Go, Clojure, Erlang etc
  - Fix concurrency issue in repository download
  - Dont allow repository name start with ?
  - Improve email threading (Pierre de La Morinerie)
  - Cleaner help page
  - Group milestones
  - Improved email notifications
  - Contributors API (sponsored by Mobbr)
  - Fix LDAP TLS authentication (Boris HUISGEN)
  - Show VERSION information on project sidebar
  - Improve branch removal logic when accept MR
  - Fix bug where comment form is spawned inside the Reply button
  - Remove Dir.chdir from Satellite#lock for thread-safety
  - Increased default git max_size value from 5MB to 20MB in gitlab.yml. Please update your configs!
  - Show error message in case of timeout in satellite when create MR
  - Show first 100 files for huge diff instead of hiding all
  - Change default admin email from admin@local.host to admin@example.com

v 7.0.0
  - The CPU no longer overheats when you hold down the spacebar
  - Improve edit file UI
  - Add ability to upload group avatar when create
  - Protected branch cannot be removed
  - Developers can remove normal branches with UI
  - Remove branch via API (sponsored by O'Reilly Media)