@@ -5,7 +5,7 @@
 
   .form-group
     = f.label :group_access, "Group Access", class: 'control-label'
-    .col-sm-10= select_tag :group_access, options_for_select(UsersGroup.group_access_roles, @users_group.group_access), class: "project-access-select select2"
+    .col-sm-10= select_tag :group_access, options_for_select(@current_users_group_roles, @users_group.group_access), class: "project-access-select select2"
 
   .form-actions
     = f.submit 'Add users into group', class: "btn btn-create"
