@@ -75,7 +75,7 @@ describe "Group access", feature: true  do
       subject { edit_group_path(group) }
 
       it { should be_allowed_for owner }
-      it { should be_denied_for master }
+      it { should be_allowed_for master }
       it { should be_denied_for reporter }
       it { should be_allowed_for :admin }
       it { should be_denied_for guest }
@@ -87,7 +87,7 @@ describe "Group access", feature: true  do
       subject { projects_group_path(group) }
 
       it { should be_allowed_for owner }
-      it { should be_denied_for master }
+      it { should be_allowed_for master }
       it { should be_denied_for reporter }
       it { should be_allowed_for :admin }
       it { should be_denied_for guest }
