@@ -71,7 +71,7 @@ describe "Group with internal project access", feature: true  do
       subject { edit_group_path(group) }
 
       it { should be_allowed_for owner }
-      it { should be_denied_for master }
+      it { should be_allowed_for master }
       it { should be_denied_for reporter }
       it { should be_allowed_for :admin }
       it { should be_denied_for guest }
