@@ -1,4 +1,5 @@
 v 7.2.0
+  - Group masters can manage group members
   - Explore page
   - Add project stars (Ciro Santilli)
   - Log Sidekiq arguments
